# server/src/main/kotlin/com/jakubspiewak/sheep/expense/entry/ExpenseScheduleEntriesApiDelegateImpl.kt
@@ -5,11 +5,19 @@ import com.jakubspiewak.sheep.generated.model.ExpenseEntryCreateRequest
 import com.jakubspiewak.sheep.generated.model.ExpenseEntryResponse
 import com.jakubspiewak.sheep.generated.model.ExpenseEntryUpdateRequest
 import org.bson.types.ObjectId
+import org.springframework.data.domain.Sort
+import org.springframework.data.mongodb.core.MongoTemplate
+import org.springframework.data.mongodb.core.query.Criteria
+import org.springframework.data.mongodb.core.query.Query
 import org.springframework.http.ResponseEntity
 import org.springframework.stereotype.Service
+import java.time.YearMonth
 
 @Service
-class ExpenseScheduleEntriesApiDelegateImpl(private val repository: ExpenseEntryRepository) : ExpenseEntryApiDelegate {
+class ExpenseScheduleEntriesApiDelegateImpl(
+    private val repository: ExpenseEntryRepository,
+    private val mongoTemplate: MongoTemplate
+) : ExpenseEntryApiDelegate {
 
     override fun createExpenseEntry(expenseEntryCreateRequest: ExpenseEntryCreateRequest): ResponseEntity<ExpenseEntryResponse> {
         val document = ExpenseEntryDocument(
@@ -17,8 +25,10 @@ class ExpenseScheduleEntriesApiDelegateImpl(private val repository: ExpenseEntry
             amount = expenseEntryCreateRequest.amount,
             date = expenseEntryCreateRequest.date,
             name = expenseEntryCreateRequest.name ?: "",
-            blueprintId = expenseEntryCreateRequest.blueprintId?.let { ObjectId(it) },
-            tags = expenseEntryCreateRequest.tags?.map { ObjectId(it) } ?: listOf()
+            blueprintId = expenseEntryCreateRequest.blueprintId
+                ?.let { it.ifBlank { null } }
+                ?.let(::ObjectId),
+            tags = expenseEntryCreateRequest.tags?.map(::ObjectId) ?: listOf()
         )
         val savedEntry = repository.save(document)
         return ResponseEntity.ok(savedEntry.toResponse())
@@ -29,8 +39,48 @@ class ExpenseScheduleEntriesApiDelegateImpl(private val repository: ExpenseEntry
         return ResponseEntity.noContent().build()
     }
 
-    override fun getExpenseEntries(): ResponseEntity<List<ExpenseEntryResponse>> {
-        val entries = repository.findAll().map { it.toResponse() }
+    override fun getExpenseEntries(
+        month: String?,
+        scheduleId: String?,
+        anyOfTags: List<String>?,
+        allOfTags: List<String>?,
+        sort: String?,
+        order: String?
+    ): ResponseEntity<List<ExpenseEntryResponse>> {
+        val query = Query()
+
+        when (scheduleId) {
+            "null" -> {
+                query.addCriteria(Criteria.where("blueprintId").isNull())
+            }
+
+            else -> {
+                scheduleId
+                    ?.let(::ObjectId)
+                    ?.let(Criteria.where("blueprintId")::`is`)
+                    ?.let(query::addCriteria)
+            }
+        }
+
+        month
+            ?.let(YearMonth::parse)
+            ?.let { Criteria.where("date").gte(it.atDay(1)).lte(it.atEndOfMonth()) }
+            ?.let(query::addCriteria)
+
+        anyOfTags
+            ?.map(::ObjectId)
+            ?.let(Criteria.where("tags")::`in`)
+            ?.let(query::addCriteria)
+
+        allOfTags
+            ?.map(::ObjectId)
+            ?.let(Criteria.where("tags")::all)
+            ?.let(query::addCriteria)
+
+        sort?.let { Sort.by(if (order == "desc") Sort.Direction.DESC else Sort.Direction.ASC, it) }
+            ?.let(query::with)
+
+        val entries = mongoTemplate.find(query, ExpenseEntryDocument::class.java).map { it.toResponse() }
         return ResponseEntity.ok(entries)
     }
 
